ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: communication
  namespace: default
  labels:
    app: devtroy
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    persianblackid: persianblack.devtroy.communication.ingress
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - communication.test.devtroy.com
      secretName: communication-ingress
  rules:
    - host: communication.test.devtroy.com
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: communication
                port:
                  number: 8083
